--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="title_activity_authentication">AuthenticationActivity</string>
     <string name="please_sign_in">Please sign in through Imgur</string>
     <string name="subreddit_act">Subreddit</string>
+    <string name="subreddit_placeholder">/r/Subreddit</string>
+    <string name="subreddit_go">GO!</string>
     <string name="gallery_act">Gallery</string>
     <string name="upload_act">Upload</string>
     <string name="search_act">Search</string>
@@ -21,4 +23,5 @@
         <item>Top (this year)</item>
         <item>Top (all time)</item>
     </string-array>
+    <string name="title_activity_subreddit">SubredditActivity</string>
 </resources>
