Added upload related strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="subreddit_go">GO!</string>
     <string name="gallery_act">Gallery</string>
     <string name="upload_act">Upload</string>
+    <string name="upload_photo_label">Upload a photo!</string>
+    <string name="upload_from_photo_roll">Pick from gallery</string>
+    <string name="upload_from_new_photo">Take a new photo</string>
     <string name="search_act">Search</string>
     <string-array name="section">
         <item>Hot</item>
