Stop using hardcoded strings for options menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
         <item>Top (all time)</item>
     </string-array>
     <string name="title_activity_subreddit">SubredditActivity</string>
+    <string name="settings">Settings</string>
+    <string name="quit">Quit</string>
 </resources>
