--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="title_activity_subreddit">SubredditActivity</string>
     <string name="settings">Settings</string>
     <string name="quit">Quit</string>
+    <!-- İyi akşamlar ozan bey -->
+    <string name="image_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
 </resources>
