Fontawesome icons are awesome, right?

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,17 @@
     <string name="authenticate">Authenticate</string>
     <string name="title_activity_authentication">AuthenticationActivity</string>
     <string name="please_sign_in">Please sign in through Imgur</string>
-    <string name="subreddit_act">Subreddit</string>
+    <string name="subreddit_act">&#xf281;</string>
     <string name="subreddit_placeholder">/r/Subreddit</string>
     <string name="subreddit_go">GO!</string>
     <string name="search_placeholder">Search</string>
-    <string name="gallery_act">Gallery</string>
-    <string name="upload_act">Upload</string>
-    <string name="profile_act">Profile</string>
+    <string name="gallery_act">&#xf015;</string>
+    <string name="upload_act">&#xf030;</string>
+    <string name="profile_act">&#xf007;</string>
     <string name="upload_photo_label">Upload a photo!</string>
     <string name="upload_from_photo_roll">Pick from gallery</string>
     <string name="upload_from_new_photo">Take a new photo</string>
-    <string name="search_act">Search</string>
+    <string name="search_act">&#xf002;</string>
     <string name="def_section">Default Section</string>
     <string name="def_sorting">Default Sorting</string>
     <string name="def_subreddit">Default Subreddit</string>
