Added points string

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -8,6 +8,7 @@
     <string name="subreddit_go">Git!</string>
     <string name="search_placeholder">Ara</string>
     <string name="gallery_act">&#xf015;</string>
+    <string name="points">Puan</string>
     <string name="upload_act">&#xf030;</string>
     <string name="profile_act">&#xf007;</string>
     <string name="upload_photo_label">Bir fotoğraf yükle!</string>
