--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="subreddit_go">GO!</string>
     <string name="search_placeholder">Search</string>
     <string name="gallery_act">&#xf015;</string>
+    <string name="points">Points</string>
     <string name="upload_act">&#xf030;</string>
     <string name="profile_act">&#xf007;</string>
     <string name="upload_photo_label">Upload a photo!</string>
