Added created_at, reputation, bio keys

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -38,4 +38,7 @@
     <string name="quit">Çıkış</string>
     <!-- How old are you?! -->
     <string name="image_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
+    <string name="created_at">"Oluşturulduğu Tarih: "</string>
+    <string name="reputation">"Saygınlık: "</string>
+    <string name="bio">"Biografi: "</string>
 </resources>
