--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="points">Points</string>
     <string name="upload_act">&#xf030;</string>
     <string name="profile_act">&#xf007;</string>
+    <string name="created_at">Created At: </string>
+    <string name="reputation">Reputation: </string>
+    <string name="bio">Biography: </string>
     <string name="upload_photo_label">Upload a photo!</string>
     <string name="upload_from_photo_roll">Pick from gallery</string>
     <string name="upload_from_new_photo">Take a new photo</string>
