--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -35,4 +35,7 @@
     <string name="created_at">Oluşturulduğu Tarih:</string>
     <string name="reputation">Saygınlık:</string>
     <string name="bio">Biyografi:</string>
+    <string name="select_picture">Fotoğraf Seç</string>
+    <string name="image_uploaded">Fotoğraf başarıyla gönderildi! URL:</string>
+    <string name="image_uploaded_success">Gönderim Başarılı</string>
 </resources>
