--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">ImgurIsNotImgur</string>
+    <string name="ok">OK</string>
+    <string name="open">Open</string>
     <string name="authenticate">Authenticate</string>
     <string name="title_activity_authentication">AuthenticationActivity</string>
     <string name="please_sign_in">Please sign in through Imgur</string>
