--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -48,5 +48,6 @@
     <string name="days">gün</string>
     <string name="months">ay</string>
     <string name="years">yıl</string>
+    <string name="clear_cache">Önbelleği Temizle</string>
 
 </resources>
