German: "cache clear"

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -48,4 +48,5 @@
     <string name="seconds">S</string>
     <string name="minutes">M</string>
     <string name="hours">U</string>
+    <string name="clear_cache">Cache Löschen</string>
 </resources>
