--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -49,4 +49,5 @@
     <string name="minutes">M</string>
     <string name="hours">U</string>
     <string name="clear_cache">Cache Löschen</string>
+    <string name="clear_cache_toast">Cache gelöscht</string>
 </resources>
