--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -49,4 +49,5 @@
     <string name="months">ay</string>
     <string name="years">yıl</string>
     <string name="clear_cache">Önbelleği Temizle</string>
+    <string name="clear_cache_toast">Önbellek temizlendi</string>
 </resources>
