--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="months">mo</string>
     <string name="years">yr</string>
     <string name="clear_cache">Clear Cache</string>
+    <string name="clear_cache_toast">Cache Cleared</string>
 </resources>
