--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -40,7 +40,7 @@
     <string name="ok">Tamam</string>
     <string name="open">Aç</string>
     <string name="select_picture">Fotoğraf Seç</string>
-    <string name="image_uploaded">Fotoğraf başarıyla gönderildi! URL:</string>
+    <string name="image_uploaded">Fotoğraf başarıyla gönderildi!</string>
     <string name="image_uploaded_success">Gönderim Başarılı!</string>
     <string name="seconds">sn</string>
     <string name="minutes">dk</string>
